# Piscine_Python

Python0/ex00/: Hello.py
Python0/ex01/: format_ft_time.py
Python0/ex02/: find_ft_type.py
Python0/ex03/: NULL_not_found.py
Python0/ex04/: whatis.py
Python0/ex05/: building.py
Python0/ex06/: filterstring.py  ft_filter.py
Python0/ex08/: Loading.py  tester.py
Python0/ex09/: README.md  pyproject.toml
Python0/ex09/src/ft_package/: thing.py
Python1/ex00/: give_bmi.py
Python1/ex01/: array2D.py
Python1/ex02/: load_image.py
Python1/ex03/: load_image.py
Python1/ex04/: load_image.py  rotate.py
Python1/ex05/: pimp_image.py  tester.py
Python2/ex00/: load_csv.py
Python2/ex01/: aff_life.py
Python2/ex02/: aff_pop.py  load_csv.py
